# Private-Equity-Associate

./: .dockerignore  .gitignore  AGENT_SPEC.md  BACKEND_ARCHITECTURE_OVERVIEW.md  DEPLOY_GUIDE.md  Dockerfile  INVESTMENT_SCORE_METHODOLOGY.md  README.md  ROADMAP-deals-real-data.md  ROADMAP.md  docker-compose.yml  plan.md  vercel.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  seed_demo.py  start.sh  validate_data.py
backend/agents/: __init__.py  base.py  dummy.py  orchestrator.py  state.py
backend/agents/competitive/: __init__.py  graph.py
backend/agents/financials/: __init__.py  graph.py
backend/agents/lbo/: __init__.py  graph.py
backend/agents/memo/: __init__.py  graph.py  pdf_renderer.py  prompts.py
backend/agents/research/: __init__.py  graph.py
backend/agents/sourcing/: __init__.py  graph.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_01_dashboard_scoring.py  2026_07_02_investment_strategies.py  2026_07_02_signals_market_pulse.py  215b1f04d130_add_deal_settings_table.py  46417ac6cab7_add_investment_decision_platform_tables.py  5e88d99b2da6_initial_schema.py  a1b2c3d4e5f6_intelligence_hub_schema.py  b2c3d4e5f6g7_add_decision_output_to_intelligence_hubs.py
backend/api/: auth.py  dependencies.py  main.py  middleware.py  rate_limit.py
backend/api/routers/: __init__.py  admin.py  companies.py  competitive.py  dashboard.py  financials.py  intelligence.py  lbo.py  market_pulse.py  memo.py  opportunity_discovery.py  overview.py  pipeline.py  research.py  sourcing.py
backend/core/: celery_app.py  confidence.py  config.py  embeddings.py  exceptions.py  lbo_engine.py  llm.py  prompts.py  retry.py  run_tracker.py  tasks.py  vector_search.py
backend/db/: crud.py  models.py  seed.py  session.py
backend/ingest/: companies_house.py  embedding_pipeline.py  financial_loader.py  run.py  scheduler.py  sec_fetcher.py
backend/schemas/: __init__.py  agent.py  company.py  competitor.py  confidence_ledger.py  dashboard.py  deal.py  deal_event.py  diligence.py  evidence.py  filing.py  financials.py  intelligence.py  investment_view.py  lbo.py  market_pulse.py  memo.py  opportunity_discovery.py  overview.py  reasoning_trace.py  research.py  signals.py
backend/services/: change_summarizer.py  confidence_ledger_builder.py  data_provider.py  decision_engine.py  decision_readiness.py  evidence_status_mapper.py  intelligence_hub_writer.py  investment_view_manager.py  next_actions_engine.py  opportunity_discovery.py  scoring_engine.py  universe_screen.py
backend/tests/: test_celery.py  test_overview.py  test_phase3.py  test_phase5.py
backend/tests/agents/: test_competitive_agent.py  test_dummy.py  test_financials_agent.py  test_lbo_agent.py  test_memo_agent.py  test_orchestrator.py  test_orchestrator_full.py  test_research_agent.py  test_sourcing_agent.py  test_state.py
backend/tests/core/: test_confidence.py  test_lbo_engine.py  test_llm.py  test_retry.py
backend/tests/db/: test_crud.py
docs/: decision-engine-confidence-methodology.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-layout.tsx  empty-state.tsx  info-flyout.tsx  reasoning-trace.tsx  sidebar.tsx  skeleton.tsx  toast.tsx
frontend/src/contexts/: user-context.tsx
frontend/src/hooks/: use-deal-overview.ts  use-deal-settings.ts  use-diligence-mutations.ts  use-discovery-summary.ts  use-evidence-update.ts  use-investment-strategy.ts  use-next-actions.ts  (+7 more)
(+57 files in other folders)
