[project]
name = "pe-platform"
version = "0.1.0"
description = "AI-Driven PE Investment Platform"
authors = [
    {name = "PE Platform Team", email = "team@peplatform.local"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",            # async driver — used by the app at runtime
    "psycopg2-binary>=2.9.9",     # sync driver — used by Alembic migrations
    "pgvector>=0.2.5",

    # Data validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # AI / LLM
    "langchain>=0.2.0",
    "langgraph>=0.0.60",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.4.0",

    # Task queue
    "celery>=5.4.0",
    "redis>=5.0.0",

    # Financial data
    "yfinance>=0.2.40",
    "edgar>=5.0.0",

    # Web search
    "tavily-python>=0.3.0",

    # PDF generation
    "weasyprint>=62.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # HTTP client
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # Utilities
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
]

[project.scripts]
pe-seed = "db.seed:main"
pe-ingest = "ingest.run:main"
pe-validate = "validate_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["api", "agents", "core", "db", "ingest", "schemas"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
